# speakerz

./: .gitignore  README.md  TODO.org  flake.nix  pyproject.toml
src/: __init__.py  __main__.py
src/templates/: base.html  hello.html  home.html
