[tool.poetry]
name = "speakerz"
version = "0.0.1"
description = "Beets, but for the server!"
authors = ["Sakooooo"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "speakerz", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
